--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -21,3 +21,4 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it004002) |Calculations of RTD and distribution functions curves from step change method| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_022RTDstep.ipynb)
 - | Using RTDs as diagnotic tools | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_023RTDasDiagnosticTool.ipynb)
 \@ref(exr:it004003) |Calculation of conversion based on RTD| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_024RTDconversion.ipynb)
+- | Response of in-serie-tanks model | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_025lect_025in-tank-serie.ipynb)
