--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -22,3 +22,4 @@ Exercises | Name | Solution (Python)
 - | Using RTDs as diagnotic tools | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_023RTDasDiagnosticTool.ipynb)
 \@ref(exr:it004003) |Calculation of conversion based on RTD| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_024RTDconversion.ipynb)
 - | Response of in-serie-tanks model | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_025lect_025in-tank-serie.ipynb)
+\@ref(exr:it004004) |Estimate the number of tanks based in Tanks-in-serie model| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_026numberofTanks.ipynb)
