--- a/04-summary.Rmd
+++ b/04-summary.Rmd
@@ -1,3 +1,9 @@
 # Final Words
 
-We have finished a nice book.
+I reached the end of this notes compilation for one of my courses as a Chemical Engineering professor at the [Central University of Venezuela](http://www.ucv.ve). I am genuinely thankful for those 15 years dedicated to lecture (to) and learning from my students.
+
+Being an academic advisor was one of the scariest things I had ever done. Every meeting, talk, demonstration, video lecture, code presentation was challenging, but in the end, an enriching task.
+
+Thank you to all my students, professors, teammates for your support and encouragement to be a better human being.
+
+Now, I will be a life learner and keep my dear Alma Mater as one of the priceless life experiences I have had.
