--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -23,3 +23,4 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it004003) |Calculation of conversion based on RTD| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_024RTDconversion.ipynb)
 - | Response of in-serie-tanks model | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_025lect_025in-tank-serie.ipynb)
 \@ref(exr:it004004) |Estimate the number of tanks based in Tanks-in-serie model| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_026numberofTanks.ipynb)
+\@ref(exr:it004005) |Comparison in conversion calculation for a non-ideal flow reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_027nonidealmodels.ipynb)
