--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is my notes recopilation for the course of Chemical Reaction Design at Central University of Venezuela."
+description: "This is my note compilation for the course of Chemical Reaction Design at Central University of Venezuela."
 ---
 
 # Introduction {-}
