--- a/codes/lect_001BatchReactorParallel.ipynb
+++ b/codes/lect_001BatchReactorParallel.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "naughty-telling",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Batch reactor, multiple reactions\n",
     "\n",
@@ -24,7 +28,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "opened-dining",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -39,7 +47,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "timely-terminal",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "params = {\n",
@@ -55,7 +67,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "important-librarian",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def ode_parallel(t, C, parameters):\n",
@@ -70,7 +86,11 @@
   {
    "cell_type": "markdown",
    "id": "obvious-divorce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's solve the problem for two values of k1"
    ]
@@ -79,7 +99,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "english-adelaide",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "k2 = 1\n",
@@ -93,7 +117,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "vanilla-moscow",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "solutions = []\n",
@@ -111,7 +139,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dress-finance",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -148,7 +180,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "sublime-dakota",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
